# fileslink

./: .env.docker.example  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.multi  LICENSE  LICENSE.md  QUICKSTART.md  README.md  TELEGRAM_STORAGE_SETUP.md  docker-compose-telegram-api.yml  docker-compose.yml  render.yaml
.github/workflows/: docker.yml  rust.yml
bot/: Cargo.toml
bot/src/: bot.rs  queue.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
config/: permissions.json
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEPLOYMENT.md  FAQ.md  INSTALLATION.md  PERMISSIONS.md  QUICKSTART.md  README_FULL.md  RENDER_DEPLOYMENT.md  SETUP_FASTTELETHON.md  TELEGRAM_STORAGE_SETUP.md  USAGE.md
python_service/: Dockerfile  FastTelethon.py  README.md  authorize.py  docker-entrypoint-enhanced.sh  docker-entrypoint.sh  main.py  requirements.txt
shared/src/: config.rs  file_storage.rs  lib.rs  link_utils.rs
src/: main.rs  server.rs
